fix image not showing

--- a/public/css/cssreset.css
+++ b/public/css/cssreset.css
@@ -9,3 +9,13 @@
   --pico-primary-focus: #36d49f;
   --pico-primary-inverse: #fff;
 }
+a {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
