--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -17,7 +17,12 @@ nav {
   height: 50px;
   object-fit: contain;
 }
-
+a.fill-div {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
 /* Styling untuk input pencarian */
 .search-section input {
   margin-bottom: auto;
